fixed alignment on user page

--- a/client/user/user_styles.css
+++ b/client/user/user_styles.css
@@ -206,26 +206,23 @@ body {
   margin-left: 35px;
 }
 
-.main-container{
+.main-container {
   position: absolute;
-  top:50px;
-  left: 400px;
-  
 }
 
-.user-container{
+.user-container {
   display: flex;
   flex-direction: column;
   align-items: center;
   align-content: space-around;
   height: 600px;
   width: 550px;
-  background-color: #513E5C;
+  background-color: #513e5c;
   border-radius: 18px;
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
 }
 
-.user-img{
+.user-img {
   margin-top: 20px;
   width: 170px;
   height: 170px;
@@ -234,13 +231,13 @@ body {
   border-radius: 12px;
 }
 
-.user-img i{
+.user-img i {
   font-size: 100px;
   line-height: 180px;
-  color: #513E5C;
+  color: #513e5c;
 }
 
-.user-container .user{
+.user-container .user {
   list-style: none;
   padding: 0;
   margin: 0;
@@ -252,7 +249,7 @@ body {
   height: 50%;
 }
 
-.user-text{
+.user-text {
   display: flex;
   flex-direction: column;
   color: #c7abc7;
@@ -266,7 +263,6 @@ body {
 .main-container {
   margin-top: 20px;
   margin-left: 3%;
-
 }
 
 .profile-container {
